# snail-mcp

./: .gitignore  README.md  pyproject.toml
mcp/: server.py
snail_mcp/: server.py
snail_mcp/excel/: read.py
