[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snail-mcp"
version = "0.1.2"
description = "General-purpose MCP server (Excel read and more)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["openpyxl", "mcp"]

[project.scripts]
snail-mcp = "snail_mcp.server:main"
read_excel = "snail_mcp.excel.read:_main"
mcp-server = "snail_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["snail_mcp"]
